--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-hw-07-phonebook",
+  "name": "react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AndriiSorokin.github.io/goit-react-hw-07-phonebook",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -28,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
